Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127821

DragHandler and DropArea interaction might cause a stuck mousegrab

XMLWordPrintable

    • Linux/Wayland
    • 7e419dae4 (dev), 8819184a5 (6.8)

      This seems an issue happening only on Wayland.

      If a drag is initiated by a draghandler positioned over a DropArea, after the mouse button release, regardless if the drop even has been accepted or not, the DragHandler keeps the mouse grab and the subsequent click anywhere on the scene will not have any effect besides releasing the grab. subsequent clicks will work correctly.

      In the attached example, after dragging the red square is impossible to click on any of the buttons, then clicking again the buttons will click correctly

        1. dragbug.qml
          1 kB
        2. dragbug-1.qml
          0.9 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            notmart Marco Martin
            Votes:
            5 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes