client: Notify application code of button release after leave

There is a code path to notify application code that mouse buttons are
released following a drag.

Compositors we will have been sent a leave event in the
meantime, making this code inert. Focus window will be null, and
mButtons will be empty.

We still need to send a release event QWindowSystem event to no window,
as we need to update any grabs on the device.

Change-Id: I2a090561c7d3f4669ab2dbc4eb86c8226fe15d1a
Fixes: QTBUG-127821
Reviewed-by: David Redondo <qt@david-redondo.de>
(cherry picked from commit 7e419dae46de937d9b7a49c74a67771cac4f9e9a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>